--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -2,43 +2,104 @@
 # documentation: https://d.android.com/studio/projects/add-native-code.html
 
 # Sets the minimum version of CMake required to build the native library.
-
 cmake_minimum_required(VERSION 3.4.1)
 
-# Creates and names a library, sets it as either STATIC
-# or SHARED, and provides the relative paths to its source code.
-# You can define multiple libraries, and CMake builds them for you.
-# Gradle automatically packages shared libraries with your APK.
+# Create a variable fluidsynth_DIR to specify where the fluidsynth library is located.
+set(fluidsynth_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fluidsynth)
 
-add_library( # Sets the name of the library.
-             native-lib
+# Our code (native-lib.cpp) will be calling fluidsynth functions, so we add the fluidsynth binaries as dependencies of our code.
 
-             # Sets the library as a shared library.
-             SHARED
+add_library(libc++_shared SHARED IMPORTED)
+set_target_properties(libc++_shared PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libc++_shared.so)
 
-             # Provides a relative path to your source file(s).
-             native-lib.cpp )
+add_library(libcharset SHARED IMPORTED)
+set_target_properties(libcharset PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libcharset.so)
 
-# Searches for a specified prebuilt library and stores the path as a
-# variable. Because CMake includes system libraries in the search path by
-# default, you only need to specify the name of the public NDK library
-# you want to add. CMake verifies that the library exists before
-# completing its build.
+add_library(libffi SHARED IMPORTED)
+set_target_properties(libffi PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libffi.so)
 
-find_library( # Sets the name of the path variable.
-              log-lib
+add_library(libFLAC SHARED IMPORTED)
+set_target_properties(libFLAC PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libFLAC.so)
 
-              # Specifies the name of the NDK library that
-              # you want CMake to locate.
-              log )
+add_library(libfluidsynth SHARED IMPORTED)
+set_target_properties(libfluidsynth PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libfluidsynth.so)
 
-# Specifies libraries CMake should link to your target library. You
-# can link multiple libraries, such as libraries you define in this
-# build script, prebuilt third-party libraries, or system libraries.
+add_library(libfluidsynth-assetloader SHARED IMPORTED)
+set_target_properties(libfluidsynth-assetloader PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libfluidsynth-assetloader.so)
 
-target_link_libraries( # Specifies the target library.
-                       native-lib
+add_library(libgio-2.0 SHARED IMPORTED)
+set_target_properties(libgio-2.0 PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libgio-2.0.so)
 
-                       # Links the target library to the log library
-                       # included in the NDK.
-                       ${log-lib} )
+add_library(libglib-2.0 SHARED IMPORTED)
+set_target_properties(libglib-2.0 PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libglib-2.0.so)
+
+add_library(libgmodule-2.0 SHARED IMPORTED)
+set_target_properties(libgmodule-2.0 PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libgmodule-2.0.so)
+
+add_library(libgobject-2.0 SHARED IMPORTED)
+set_target_properties(libgobject-2.0 PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libgobject-2.0.so)
+
+add_library(libgthread-2.0 SHARED IMPORTED)
+set_target_properties(libgthread-2.0 PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libgthread-2.0.so)
+
+add_library(libiconv SHARED IMPORTED)
+set_target_properties(libiconv PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libiconv.so)
+
+add_library(libintl SHARED IMPORTED)
+set_target_properties(libintl PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libintl.so)
+
+add_library(liboboe SHARED IMPORTED)
+set_target_properties(liboboe PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/liboboe.so)
+
+add_library(libogg SHARED IMPORTED)
+set_target_properties(libogg PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libogg.so)
+
+add_library(libsndfile SHARED IMPORTED)
+set_target_properties(libsndfile PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libsndfile.so)
+
+add_library(libvorbis SHARED IMPORTED)
+set_target_properties(libvorbis PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libvorbis.so)
+
+add_library(libvorbisenc SHARED IMPORTED)
+set_target_properties(libvorbisenc PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libvorbisenc.so)
+
+add_library(libvorbisfile SHARED IMPORTED)
+set_target_properties(libvorbisfile PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libvorbisfile.so)
+
+add_library(libz SHARED IMPORTED)
+set_target_properties(libz PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/libz.so)
+
+add_library(preloadable_libiconv SHARED IMPORTED)
+set_target_properties(preloadable_libiconv PROPERTIES IMPORTED_LOCATION ${fluidsynth_DIR}/lib/${ANDROID_ABI}/preloadable_libiconv.so)
+
+# Library that will be called directly from JAVA
+add_library(native-lib SHARED native-lib.cpp)
+
+# Specifies the directory where the C or C++ source coude will look the #include <yourlibrary.h> header files
+target_include_directories(native-lib PRIVATE ${fluidsynth_DIR}/include)
+
+# Link everything alltogether. Notice that native-lib should be the first element in the list.
+target_link_libraries(
+        native-lib
+        libc++_shared
+        libcharset
+        libffi
+        libFLAC
+        libfluidsynth
+        libfluidsynth-assetloader
+        libgio-2.0
+        libglib-2.0
+        libgmodule-2.0
+        libgobject-2.0
+        libgthread-2.0
+        libiconv
+        libintl
+        liboboe
+        libogg
+        libsndfile
+        libvorbis
+        libvorbisenc
+        libvorbisfile
+        libz
+        preloadable_libiconv
+)
